--- a/views/register.jade
+++ b/views/register.jade
@@ -1,6 +1,6 @@
 extend layout
 block content
-	form(id='regform',  method='POST', target='/register')
+	form(id='regform',  method='POST', action='/register')
 		label
 			| Email Address:
 			input(type='text', id='email', name='email', size='40')
