--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,10 @@ block content
 		| Vivamus hendrerit arcu sed erat molestie
 		| vehicula. Sed auctor neque eu tellus
 		| rhoncus ut eleifend nibh porttitor. Ut in.
+		if user
+			| User object exists
+		else
+			| User object is blank
 	p
 		| Donec congue lacinia dui, a porttitor
 		| lectus condimentum laoreet. Nunc eu
